# todolist

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: action.yml
bot/: models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_tguser_goal_category_tguser_state.py
bot/tg/: client.py  dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
filters/: filters.py
frontend/: Dockerfile  README.md
frontend/docker/: Dockerfile  nginx.conf
frontend/src/environments/: environment.prod.ts
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_comment.py  0004_board_alter_comment_options_comment_user_and_more.py  0005_create_new_objects.py  0006_alter_comment_user_alter_goalcategory_board.py
pg_data/: postmaster.pid
pg_data/global/: 1260  1262  1262_vm  2671  2672  2676  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
pg_data/pg_subtrans/: 0000
pg_data/pg_xact/: 0000
tests/: factories.py  simple_test.py
tests/core/: user_create_test.py  user_login_test.py  user_registration_test.py  user_update_test.py
tests/goals/: board_create_test.py  board_retrieve_test.py  boards_list_test.py  category_create_test.py  category_list_test.py  category_retrieve_test.py  goal_create_test.py  goal_retrieve_test.py  goals_list_test.py
todolist/: settings.py  urls.py
(+242 files in other folders)
