[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Vitalii Madiakin <madyakinvitalii@gmail.com>"]
readme = "README.md"
include = [".env"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-environ = "^0.10.0"
psycopg2 = "^2.9.6"
spectacular = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
